--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   }, 
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
-  }
+  }, 
+  "TokenKey": "super secret unguessable key by dating App and Qabas author, this key is very important"
 }
