--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.0",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.0",
     "zone.js": "~0.13.1"
